--- a/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/08-Need-for-Programming-languages.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/08-Need-for-Programming-languages.mdx
@@ -1,1 +1,620 @@
 # Need for programming languages
+
+## Introduction
+
+As we know that if you need to communicate with you need a specific language to communicate.
+
+  
+
+For example, if you need to communicate with two people, one person knows Hindi and the other person knows Telugu. In this case you need to identify the common language between them to communicate with each other. At that time you hear that both of them are able to understand and speak in English. So that you can communicate with them by using the English language.
+
+  
+
+Similarly, some specific languages are needed to communicate with computers, and those languages are called programming languages.
+
+  
+
+>A programming language is a set of instructions written in a specific language to perform a specific task. It is mainly used to develop desktop applications, operating systems, websites, mobile applications, etc.
+
+  
+
+## Objectives of programming languages
+
+-   Some languages, such as C, are designed to produce efficient code to be run on small computer systems.
+    
+-   Some languages, such as Pascal and Simula, are designed to teach programming concepts to beginners.
+    
+-   Some languages, such as Fortran, are designed to produce efficient numeric calculations.
+    
+-   Some languages, such as COBOL, are designed to provide readable syntax for financial and other business applications.
+    
+-   Some languages, such as Ada, are designed to combine reliability, robustness, readability, and execution efficiency.
+    
+-   Some languages, such as Python, are designed to produce programs with minimal effort.
+    
+
+  
+  
+
+## Why do we need to know about programming languages?
+
+Studying programming languages will help you be better at your job, make more money, and be a happier, more fulfilled and more informed citizen, because you’ll learn to:
+
+-   Choose the most appropriate language for a given task.
+    
+-   Learn new languages more easily.
+    
+-   Use the languages you do use more productively
+    
+-   Design your own language.
+    
+-   Encounter fascinating ways of programming you might never have imagined before.
+    
+
+  
+  
+
+## Types of programming language
+
+## 1. Low-level programming language
+
+Low-level language is machine-dependent (0s and 1s) programming language. The processor runs low- level programs directly without the need of a compiler or interpreter, so the programs written in low-level language can be run very fast.
+
+  
+
+## 2. High-level programming language
+
+High-level programming language (HLL) is designed for developing user-friendly software programs and websites. This programming language requires a compiler or interpreter to translate the program into machine language (execute the program).
+
+  
+
+>The main advantage of a high-level language is that it is easy to read, write, and maintain.
+
+  
+
+>High-level programming language includes Python, Java, JavaScript, PHP, C#, C++, Objective C, Cobol, Perl, Pascal, LISP, FORTRAN, and Swift programming language.
+
+  
+  
+
+## 3. Middle-level programming language
+
+Middle-level programming language lies between the low-level programming language and the high-level programming language. It is also known as the intermediate programming language and pseudo-language.
+
+  
+
+>A middle-level programming language's advantages are that it supports the features of high-level programming, it is a user-friendly language, and closely related to machine language and human language.
+
+  
+
+>Example: C, C++, language
+
+  
+  
+
+## History of programming languages: A timeline
+
+Listed below is a timeline of the history of programming languages. The first known programming languages were complicated machine codes that were manually inputted into early computing machines. As you’ll discover, computer programming developed quickly from machine codes to fully automated human-readable code.
+
+  
+
+### 1843: Ada Lovelace’s machine algorithm
+
+Ada Lovelace invents the first-ever machine algorithm for Charles Babbage’s Difference Machine that lays the foundation for all programming languages.
+
+  
+
+![](https://lh5.googleusercontent.com/-XKpEf73rDwmlmwN8cE4LK0FUrWiE3tloUBNsWBUnepTxJDdAzNctAP7M-TH5iLdAaQFxZbxmJA7mJ3g8Z4GgZf_T0Fho9l0lcoihYqvmrW6iGwKxt0_4dSs_09zHjjSuyI4VEE22Tew5n8TLOY)
+
+  
+  
+  
+
+### 1944-45: Plankalkül
+
+Somewhere between 1944-45, Konrad Zuse developed the first ‘real’ programming language called Plankalkül (Plan Calculus). Zeus’s language (among other things) allowed for the creations of procedures, which stored chunks of code that could be invoked over and over to perform routine operations.
+
+  
+
+![](https://lh3.googleusercontent.com/xOPnK_WI-lUq6gdexQgHzDMZ14bcoHXEMxXFuUi_pCaLQ9js1z2jgUOazOVsOAVKvBEXy3O8f-cAoswF_n1plo4GFobEbIbc4AFGAkL2VPirsqzv4xSMMBM4nT01cRmSa5PNwNfwpqQVFKnz-sA)
+
+  
+
+### 1949: Assembly Language
+
+Assembly language was used in the Electronic Delay Storage Automatic Calculator (EDSAC). Assembly language was a type of low-level programming language that simplified the language of machine code. In other words, the specific instructions necessary to operate a computer.
+
+  
+  
+
+### 1949: Shortcode
+
+Shortcode (or Short-order code), was the first High-Level Language (HLL) suggested by John McCauley in 1949. However, it was William Schmitt who implemented it for the BINAC computer the same year and for the UNIVAC in 1950.
+
+  
+
+### 1952: Autocode
+
+Autocode was a general term used for a family of programming languages. First developed by Alick Glennie for the Mark 1 computer at the University of Manchester, Autocode was the first-ever compiled language to be implemented meaning that it can be translated directly into machine code using a program called a compiler. Autocode was used on the Ferranti Pegasus and Sirius early computing machines in addition to the Mark 1.
+
+  
+
+### 1957: FORTRAN
+
+FORmula TRANslation or FORTRAN was created by John Backus and is considered to be the oldest programming language in use today. The programming language was created for high-level scientific, mathematical, and statistical computations. FORTRAN is still in use today in some of the world’s most advanced supercomputers.
+
+  
+
+![](https://lh4.googleusercontent.com/h4yEW6P2TKRP5nnxIgI9ogZwBZCJF2f4O4DAMtGAehxqvVxRk3Ls_6UjGomByXAm5u2YxJ-fagVH612bfmp6INYpO-zYVY6Ai9Gd3YQm2sujjV-spUoP6pepLHLBdu7KaNSx3W6tgLzaUlenzbY)
+
+  
+
+### 1958: ALGOL (Algorithmic Language)
+
+Algorithmic language or ALGOL was created by a joint committee of American and European computer scientists. ALGOL served as the starting point for the development of some of the most important programming languages including Pascal, C, C++, and Java.
+
+  
+
+### 1958: LISP (List Processor)
+
+List processor or LISP was invented by John McCarthy at the Massachusetts Institue of Technology (MIT). Originally purposed for artificial intelligence, LISP is one of the oldest programming languages still in use today and can be used in the place of Ruby or Python. Companies such as Acceleration, Boeing, and Genworks are still using LISP in their tech stacks.
+
+  
+
+![](https://lh3.googleusercontent.com/2YZj7Xdacstt94cdvW8z54zpy0u2EJ-SIXRzKkXTQpndGekBDqNHM6eZ4peZviRiuDa8I5_SHXlBb6gbkZ0ldnLBEZ9hbuc2DIDMEZzw9jvHMuW5IN3XvYQz9X2io2p2z1UrZD0hIu0RY1l1AcE)
+
+  
+
+### 1959: COBOL (Common Business Oriented Language)
+
+Common Business Oriented Language (COBOL), is the programming language behind many credit card processors, ATMs, telephone and cell calls, hospital signals, and traffic signals systems (just to name a few). The development of the language was led by Dr. Grace Murray Hopper and was designed so that it could run on all brands and types of computers. COBOL is still used to this day primarily for banking and gamification systems.
+
+  
+
+![](https://lh5.googleusercontent.com/zZYAExOBtErqlrkwmu2qQ7BocGR-a_oIyzHpSnESwGpP6ye_t3xuMIlf2db6jkchfaDAAd38o-sK_bj5nic3McL88uMtov0ZdzJF30et7pfBIBTCR3bsZZzQsSU5Z6bTkEwGee94e-p4bD90Dl4)
+
+  
+  
+  
+
+### 1964: BASIC (Beginner’s All-Purpose Symbolic Instruction Code)
+
+Beginners All-Purpose Symbolic Instruction Code or BASIC was developed by a group of students at Dartmouth College. The language was written for students who did not have a strong understanding of mathematics or computers. The language was developed further by Microsoft founders Bill Gates and Paul Allen and became the first marketable product of the company.
+
+  
+
+![](https://lh4.googleusercontent.com/oj1ZmUU6g-nSbk47kq2YEZ4sRW_lShtBoxw4k1OAdxMg95d-hwPcdcPf750reThHZ3uYEChlIn2kCt0mTUdAQXMmSKm28LdeoWcQyrM5CsyeV2cj-JUeENvDHZ0e4Y0M8INWW6rzhwcjNl7GPfM)
+
+  
+  
+
+### 1970: PASCAL
+
+Named after the French mathematician Blaise Pascal, Niklaus Wirth developed the programming language in his honor. It was developed as a learning tool for computer programming which meant it was easy to learn. It was favored by Apple in the company’s early days, because of its ease of use and power.
+
+  
+
+![](https://lh6.googleusercontent.com/J9DhUAXD_CVF6vy-DaqBeBxCNOhqDFYleSTpc2gdjYZbAXgy8xAx0GSoOtsnz6Uu5UDmZbX52aP9WWR1Abgo8FAu1Yavakov_fcrWrCgqcfNqPlJj6Dbr7ES4Jj2DOcjG4PE8mbG79wr5w2gR5k)
+
+  
+
+### 1972: Smalltalk
+
+Developed at the Xerox Palo Alto Research Centre by Alan Kay, Adele Goldberg, and Dan Ingalls, Smalltalk allowed for computer programmers to modify code on the fly. It introduced a variety of programming language aspects that are visible languages of today such as Python, Java, and Ruby. Companies such as Leafly, Logitech, and CrowdStrike state they use Smalltalk in their tech stacks.
+
+  
+
+![](https://lh6.googleusercontent.com/EdjmChclxBEuuK6DCQCH-cERT4Dc6_NuwAhNgJpoglWpUjuLFiwCKvv9-_U3c9LI1cUmPeOIztteDIBeLTaCJ_zdBRp5bBo-7GOWiFRLf1OjuhbVyh8Y9fuOLwPdsrxGRpA51G0iJEAWeTEEmeA)
+
+### 1972: C
+
+Developed by Dennis Ritchie at the Bell Telephone Laboratories for use with the Unix operating system. It was called C because it was based on an earlier language called ‘B’. Many of the current leading languages are derivatives of C including; C#, Java, JavaScript, Perl, PHP, and Python. It also has been/still being used by huge companies like Google, Facebook, and Apple.
+
+  
+
+![](https://lh4.googleusercontent.com/rY0EdA0xd28eIf-2xEJrPfrfWJBvfISAWYe80ubbhPnUkv5YkdrMDbHijcR4ycY_hUthdEBZsAe18GdQLL_lpqqJcxgrCBFfxGMTbKqQtyAVNRtDSpBSPpCdSiPz9MKrhtgO-9h8hm8L-m2jqSg)
+
+  
+  
+
+### 1972: SQL (SEQUEL at the time)
+
+SQL was first developed by IBM researchers Raymond Boyce and Donald Chamberlain. SEQUEL (as it was referred to at the time), is used for viewing and changing information that is stored in databases. Nowadays the language is an acronym – SQL, which stands for Structured Query Language. There are a plethora of companies that use SQL and some of them include Microsoft and Accenture.
+
+  
+
+![](https://lh3.googleusercontent.com/dYn-CrJ4CsvtkBQYx83yFqeJs0RjinCIpidfm3_Dszi2_-ZS6MmORQUmmn7jm0WK9tETPKezY8Zlvjt-Dgb-TuleigfxMmKuB7x01M4tf6MSuKNT_8brKJ6ifDXw8Uol2IK0MWir4YjEc3vdyKc)
+
+### 1980/81: Ada
+
+Ada was originally designed by a team led by Jean Ichbiah of CUU Honeywell Bull under contract to the United States Department of Defense. Named after the mid-19th-century mathematician Ada Lovelace, Ada is a structured, statically typed, imperative, wide-spectrum, and object-oriented high-level programming language. Ada was extended from other popular programming languages at the time such as Pascal. Ada is used for air-traffic management systems in countries such as Australia, Belgium, and Germany as well as a host of other transport and space projects.
+
+  
+
+### 1983: C++
+
+Bjarne Stroustrup modified the C language at the Bell Labs, C++ is an extension of C with enhancements such as classes, virtual functions, and templates. It has been listed in the top 10 programming languages since 1986 and received Hall of Fame status in 2003. C++ is used in MS Office, Adobe Photoshop, game engines, and other high-performance software.
+
+![](https://lh4.googleusercontent.com/9X81lZDoVdRxoIV3VacIo9Q_JvpWFiJJUeewIws7nEn28MkaFRK03EqEjo_MeG5gDEzYG73hWYN32Nn_9nysVs-PoVqm3V0u_C6Xw58670xiaNIemy4sED2yTA53rMeVaAmigC76pUlq745CPkI)
+
+### 1983: Objective-C
+
+Developed by Brad Cox and Tom Love, Objective-C is the main programming language used to write software for macOS and iOS, Apple’s operating systems.
+
+![](https://lh5.googleusercontent.com/CFTS3AV5xvPsSH5fGh8rLGz6qy1-yAsIDrvsUXcAMZ7s8oYnnq5j7F7pguibOCDyscmSxQ99X_bgeianx-P3viMbgHaAGCN6lGLl7iPxKXtETdwV3CsxbScLzDm16ygvjmA7ciu9Uy1hDlwd4LY)
+
+  
+
+### 1987: Perl
+
+Perl was created by Larry Wall and is a general-purpose, high-level programming language. It was originally designed as a scripting language designed for text editing but nowadays it’s widely used for many purposes such as CGI, database applications, system administration, network programming, and graphic programming.
+
+  
+
+![](https://lh3.googleusercontent.com/VUTqxCNf3UdrBcnSV34h03xAFm2NXLaOdHK1Gruf_QUl1jFJhtBpkKia5jYxEgAa7eALhEnu1L2ZxqWjF2ZT-vXmZz_nvPYZ-b3jT-NO9kKPvrEndYoVENWHIjcPO4eZDleP6LoROqYix6G-Sgk)
+
+  
+
+### 1990: Haskell
+
+Haskell is a general-purpose programming language named after the American logician and mathematician Haskell Brooks Curry. It is a purely functional programming language meaning it’s primarily mathematical. It’s used across multiple industries particularly those that deal with complicated calculations, records, and number-crunching. Like many other programming languages from this era, it is not overly common to see Haskell in use for well-known applications. With that said, the programming language has been used to write a number of games one of which is Nikki and the Robots.
+
+  
+
+![](https://lh3.googleusercontent.com/MSSQuwWHgi-VF3br8GrEl1U00PDxq0WSdmRP2vmq_hAAXqjPV7gkoOzIibhHyKQJaWVJKt1INxRQzAqLhPGNXVjWtnQ6aJ9hbq_YzBirQBMuX2paEYGATnpWcORfQcjTz1FxOUX1c6T516BE7zI)
+
+  
+
+### 1991: Python
+
+Named after the British comedy troupe ‘Monty Python’, Python was developed by Guido Van Rossum. It is a general-purpose, high-level programming language created to support a variety of programming styles and be fun to use (a number of the tutorials, samples, and instructions often contain Monty Python references). Python is, to this day, one of the most popular programming languages in the world is used by companies such as Google, yahoo, and Spotify.
+
+  
+
+![](https://lh3.googleusercontent.com/ffjZPdJhJSclGiE5wySMmKAMWx913Gx_GlFP5X2YTdPuMgRgKvCD3ZQMC3Y1qfJt3H6jqM7Xdt8qyys7aGX_ih9UkJzUXPlFnmGioGoHuLdtVwxNVipoaqPg4FOkVABTVDgCzJsGqsprpRoz8SQ)
+
+  
+
+### 1991: Visual Basic
+
+Developed by Microsoft, Visual Basic allows programmers to utilize a drag-and-drop style of choosing and changing pre-selected chunks of code through a graphical user interface (GUI). The language is not overly used these days however Microsoft has used portions Visual Basic to a number of their applications like Word, Excel, and Access.
+
+  
+
+![](https://lh3.googleusercontent.com/Kz4nUDfjqhv05qhw10YkJg82_332QC6_Xdpr7dig57H3wVdUUFipovuOo8mPhZlLGc3n_1jV-ViIzDqWEhxAmhbiBHTOpygIht_LhxSX-gVMJboF5qDyHWangUthcwozyWcZ_EtPjqKaYlTrsGY)
+
+  
+
+### 1993: Ruby
+
+Created by Yukihiro Matsumoto, Ruby is an interpreted high-level programming language. A teaching language which was influenced by Perl, Ada, Lisp, and Smalltalk – among others. Ruby’s primary uses are for web applications development and Ruby on Rails. Twitter, Hulu, and Groupon are some well-known examples of companies that use Ruby.
+
+  
+
+![](https://lh5.googleusercontent.com/VSlOuC2czOQmluovFSJMJooCUYSH1C0F789jndkWLnaH8IRreujeOKVpazzLyqctOkfiSv5t7_ccbdoWm1MQ7ot_MALggAJ8RYx2xIZO4Nh1MRQZmMs17FbF-a2jbGwEZRP9l_-w_FZqO_wpUkw)
+
+  
+
+### 1995: Java
+
+Java is a general-purpose, high-level language created by James Gosling for an interactive TV project. It has cross-platform functionality and is consistently among the top of the world’s most popular programming languages. Java can be found everywhere, from computers to smartphones to parking meters.
+
+  
+
+![](https://lh5.googleusercontent.com/ZOcUcOB2f08z1TcBZrC0il34StuXVGwxelxpCvEoxUqy7imJWQ03Ojcgbevqv1eN5C0nK9o3clYN_pT5LWaebCKsrcikl8ezFtq8SGfXxbLURE1qjIkq9aqEYm8ZPFZ4fKFHa0q_6a3tnpnif1c)
+
+  
+
+### 1995: PHP
+
+Formerly known as ‘Personal Home Page’ which now stands for ‘Hypertext Preprocessor’, PHP was developed by Rasmus Lerdorf. Its primary uses include building and maintaining dynamic web pages, as well as server-side development. Some of the biggest companies from across the globe use PHP including Facebook, Wikipedia, Digg, WordPress, and Joomla.
+
+  
+
+![](https://lh3.googleusercontent.com/MxiS5e1bvoN0QX8i2V5cWXVTXxlCEp2OtiIIwUaYUQi6kXSUEBQ1aOAJTiODf13bjSJFyQh7MKcPNCE_G3n3LOEi8dtXrIeCBeb1qbeUvm_NmPgaIBl6ZZEaSdafMHTNZ3ThLhmhBUVe6Uk3CQI)
+
+  
+  
+  
+  
+  
+  
+  
+  
+
+### 1995: JavaScript
+
+JavaScript was created by Brendan Eich, this language is primarily used for dynamic web development, PDF documents, web browsers, and desktop widgets. Almost every major website uses JavaScript. Gmail, Adobe Photoshop, and Mozilla Firefox include some well-known examples.
+
+  
+
+![](https://lh6.googleusercontent.com/5S_z7LTlJB-r2h1gE7m8cKxkS31yJE7105B7c-ecTh9ERaMCBPviQ5JW0twOEgMVNCgJwIc4rX-1D8WkyH-jCE85UoWoQxtVy_nmk8-94auyjdrIxZ19Tj3APWMQClhtfaUK6U07S83OEOXedvE)
+
+### 2000: C#
+
+Developed at Microsoft with the hope of combining the computing ability of C++ with the simplicity of Visual Basic, C# is based on C++ and shares many similarities with Java. The language is used in almost all Microsoft products and is seen primarily in developing desktop applications.
+
+![](https://lh5.googleusercontent.com/M1Se-qA29tJE9dgYgUxJ9ux0W9PWA42v6zXncyfsgGMs1BcgqJFRrHcjT_eCbnebqrBBiIGYrJYPGE62g2OzgqIPmViLSXWdky7-FTyUInfUo1F7LvZSpfhskCr1m22qsCijKA0YdblMvin4TqY)
+
+  
+
+### 2003: Scala
+
+Developed by Martin Odersky, Scala which combines mathematical functional programming and organized object-oriented programming. Scala’s compatibility with Java makes it helpful with Android development. Linkedin, Twitter, Foursquare, and Netflix are just a few examples of the many companies that use Scala in their tech stacks.
+
+  
+
+![](https://lh3.googleusercontent.com/nld6xN0Zvx_hKy0BZd0nPPpR4z0iDwIgQrvy5G67PEArrYZgGz7tHYKITNLCwEjtJoShkFoeB176zD69_aGX1hnCBYQe49n0i4sM55PEUTbLE0cbhPt6CLTANEOtnUWmSIUeg6sZ_ntw-TpyOBE)
+
+  
+
+### 2003: Groovy
+
+Derived from Java, Groovy was developed by James Strachan and Bob McWhirter. The language improves productivity because of its succinct and easy to learn. Some well-known companies that are using Groovy in their tech stacks are Starbucks, Transferwise, and Craftbase.
+
+  
+
+![](https://lh5.googleusercontent.com/CXGGroiH2D90SsPWFVizB4YAMgO30U-PbTKHpB9jPYHZ4U6nyRCET09aiXKAUMGLlP3sr7HfiSiJWBMJU4H4D6bW58eqJxspAr6stXr_6yQyKEUcXxg74p7RfY-cKQiM3Ep_IqcUwxHxQoRqAs0)
+
+  
+
+### 2009: Go
+
+Go was developed by Google to address issues that occur due to large software systems. Due to its simple and modern structure, Go has gained popularity among some of the largest tech companies around the world such as Google, Uber, Twitch, and Dropbox.
+
+  
+
+![](https://lh3.googleusercontent.com/BVTwoIylyhhq-c9DXzfRXs1KeSX3g0RJajkLIcXVX9yrF_HLV6LkfaMkSKZwPb0edk-A_3GZN5FkUf8rIHtwNwNKAvTM35vdaThestywc87pFbnT4Lk5GE-U4IQ4J7i2BA0zDH8lOlMDfDoSlfI)
+
+  
+
+### 2014: Swift
+
+Developed by Apple as a replacement for C, C++, and Objective-C, Swift was developed with the intention to be easier than the aforementioned languages and allow less room for error. Swift’s versatility means it can be used for desktop, mobile, and cloud applications. Leading language app ‘Duolingo’ launched a new app that was written in Swift.
+
+  
+
+![](https://lh6.googleusercontent.com/Tc26AIRwcR_Dgi6e9I3chx5jFx5U6J_IaOaK85CU5D9KsE9lVnASQPv9tb4ix-xnih7V0yyd1BsaNgLj3YWYpM1GC-cC1za8GBqo5M1-p8-RQTITe5OS56BcfiNWbwbGx96BBWW18L4X8oOkmuM)
+
+  
+  
+  
+  
+
+## What old programming languages are still used today?
+
+Not all programming languages last forever. Whether it’s a result of developments in technology or simply being replaced by a more sophisticated language. With that said, there are some old programming languages that are still being used by IT professionals today:
+
+  
+
+**FORTRAN**
+
+The initial version of FORTRAN was proposed at IBM by John Backus way back in 1953. It was the first optimizer compiler and was widely used for scientific work because it’s optimised code competed favourably with hand-written assembly code. The language is still used to this day on some of the world’s fastest supercomputers. There have been a string of updates since 1953 with the most recent version released in 2018.
+
+  
+
+**COBOL**
+
+COBOL was developed back in 1959 and was one of the first high-level programming languages. Despite being invented so long ago COBOL is still hugely prevalent today. In the US alone, 43% of banking systems are built on COBOL, accounting for 95% of ATM swipes, and 80% of in-person transactions.
+
+  
+
+![](https://lh3.googleusercontent.com/fu6iwwjH4aIErWUn1iI0LFxg9-AsXWv8Yp4ZFisdbdT7jBS5-WUZvLcjzhB-N4mtBpkgqmDTOOeNlixMGKksTtm726mMAOkOoCoPdErQS9Lil2MwFfgzZYPlTre8eFFsgI3P-DdTzVONXHKWSKw)
+
+  
+
+Early Microsoft and Apple Programming Languages
+
+Microsoft and Apple are two of the most fundamental companies in the history of programming languages. BASIC (first released in 1964), was modified by Microsoft founders Bill Gates and Paul Allen in 1975. Their modified version became Altair BASIC, which was the first marketed and distributed product of Microsoft, and led to the creation of the company.
+
+  
+
+>Pascal was the programming language of choice during the early days of Apple. Invented in the early 1970s, Apple developers liked Pascal because of its power and ease of use. However, when Apple acquired the NeXTSTEP code library in 1996, Objective-C (which was licensed under NeXTSTEP) became the popular language of choice for the tech giant.
+
+  
+
+What is the most popular programming language today?
+
+We’re nearing the end of our journey through the history of programming languages. As you’ve seen, computer programming has developed to a level beyond all expectation, powering the technology that we rely on a daily basis. It’s for this reason that we need skilled professionals to implement and control the programming languages that power the world today.
+
+  
+
+## But which programming language is the most popular?
+
+  
+
+The DevSkiller 2020 IT Skills Report provides valuable insight for precisely that question. The report contains data from over 213,000 coding tests sent across 143 countries by companies looking to hire specialised IT professionals.
+
+  
+
+![](https://lh6.googleusercontent.com/aHYYMB4yfo40tr3x8QLAWXBEv7CQEbJUNWgXzuZAvktObjZNILnE6ouDMnY9e-Z7j7KBHs7b0GY6LLHJ0yBv14fHHhznyMtahX7e6Usg8Lo9R0eBqN01C9yUKlK1E_fmwzvGq-coPT27-QnupQw)
+
+  
+
+As you can see above, JavaScript was the most popular language tested on DevSkiller based on the test invites that were sent out. This finding is confirmed in the 2020 Stack Overflow Developer Survey which lists JavaScript as the most popular programming language for the eighth year in a row. SQL, Java, HTML/CSS, and .NET/C# rounded out the top 5 in our results.
+
+  
+
+## Conclusion
+
+The history of programming languages is fascinating. Who would have thought that an algorithm from the mid-19th century would pave the way for the technology-driven society we live in today. From early machine codes to the sophisticated human-readable code that powers our favourite technologies today, programming languages have come a long way. What’s for certain, computer programming will continue to develop as it has done for the past 150 years and it’s exciting to see what the future brings.
+
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+
+# Assessment
+
+  
+
+**1.**What is the only thing that computers understand?
+
+  
+
+1.  Machine Code
+    
+2.  Low Level Languages
+    
+3.  High Level Languages
+    
+4.  Algorithms
+    
+
+  
+
+**Answer:**  A)
+
+  
+
+**2.**When writing a computer programmers most programs use...
+
+1.  A High Level Language
+    
+2.  A Low Level Language
+    
+3.  A Machine Code
+    
+4.  An Algorithm
+    
+
+  
+
+**Answer:**  A)
+
+  
+
+**3.**Languages that relate to the architecture and hardware of a specific computer are known as...
+
+  
+
+1.  High Level Languages
+    
+2.  Low Level Languages
+    
+3.  Simplex Languages
+    
+4.  Complex Languages
+    
+
+  
+
+**Answer:**  B)
+
+  
+  
+
+**4.**What is a high-level programming language that was developed in the mid-1970s. It is now used to write applications for nearly every available platform.
+
+  
+
+1.  Scratch
+    
+2.  Bark-Bark
+    
+3.  tynker
+    
+4.  C++
+    
+
+**Answer:**  D)
+
+  
+  
+
+**5.**Python is a clear and powerful _________-oriented programming language.
+
+  
+
+1.  software
+    
+2.  object
+    
+3.  snake
+    
+4.  source
+    
+
+  
+
+**Answer:**  B)
+
+  
+  
+
+**6.**Which of the following programming language types was created first?
+
+1.  Procedural
+    
+2.  Machine
+    
+3.  Object oriented
+    
+4.  Assembler
+    
+
+  
+
+**Answer:**  B)
+
+  
+  
+  
+
+**7.**Which of the following lists the evolution of programming languages in the correct order?
+
+1.  Procedural, non-procedural, object oriented, machine, assembler
+    
+2.  machine, assembler, procedural, non-procedural, object oriented
+    
+3.  machine, procedural, assembler, non-procedural, object oriented
+    
+4.  machine, assembler, object oriented, procedural, non-procedural
+    
+
+  
+
+**Answer:**  B)
+
+  
+  
+
+**8.**Which generation of computer languages used the LOAD, ADD and STORE codes,
+
+  
+
+1.  First
+    
+2.  Second
+    
+3.  Third
+    
+4.  Fourth
+    
+
+**Answer:**  B)
