--- a/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/01-Introduction-to-Problem-Solving.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/01-Introduction-to-Problem-Solving.mdx
@@ -11,7 +11,7 @@ In this lesson you will learn how Programming is primarily a problem-solving ski
 
 Solving problems means making choices. Typically, effective problem-solving skills result in “happier, more confident, and more independent” individuals. This skill builds confidence in you and helps you make better decisions.
 
-## Reading content on the topic:
+## Reading content on the topic
 
 You are here because you chose engineering as your career choice, you must question yourself why the world needs engineers.
 
@@ -42,7 +42,7 @@ Some technologies and domains trending in computer science are:
   
   
 
-**Steps in Problem Solving:**
+**Steps in Problem Solving**
 
 **1.  Define the problem**
     
@@ -129,13 +129,13 @@ c.  A solution is chosen
   
   
 
-## Presentation handled in the class:
+## Presentation handled in the class
 
 [PS0001 - Introduction to Problem Solving](https://docs.google.com/presentation/d/1VGQBWDHLU-RSfdbI9eOiOlFpZXFhLBNdzUlGpuITEPk/edit#slide=id.g1361768020b_0_70)
 
   
 
-## Useful resources for you:
+## Useful resources for you
 
 Here are some interesting videos that can help you post-class to dive deeper into this topic.
 
@@ -148,7 +148,7 @@ Here are some interesting videos that can help you post-class to dive deeper int
 4.  Bonus books : [Books](https://www.theexceptionalskills.com/problem-solving-books/)
     
 
-## End of the lesson Assessment:
+## End of the lesson Assessment
 
 1.  What is the correct way of solving problems?
     
