--- a/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/02-Thinking-with-numbers.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/02-Thinking-with-numbers.mdx
@@ -68,5 +68,265 @@ You can try to identify the solution to some example problems that I am providin
 
 [Check the solution!](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/PS0002_img8.png)
 
+## NUMBER SERIES
+
+We will be looking at some diagrams consisting of numbers and some of the number(s) might be missing from the diagram. Your job is to identify the missing number(s) and to do so you will be using the specified numbers in the diagram to find some pattern. Let's consider the following problem statement:
+
+  
+
+**Problem Statement:** Which number should come in the place of the question mark?
+
+  
+
+![](https://lh4.googleusercontent.com/KpHwVkd7fI-BR61tgz9K90KO_TXhCgxCnk8xr0G8gutmyTLwRzuiPcygvLrc9MBTe7BFjVxecPPZWeTDkvHTdAnikcaYhFuzONe0y4_UZ-mX2C-UqjzQwVbvFOhbuyXekeda5ITNSyB7WD5DGQ)
+
+  
+
+**Ways of thinking and dealing with such problems**
+
+>The method of dealing with numbers series problems like this one is to just observe the numbers that are known and find patterns between those numbers. The basic approach that I would suggest for such problems is to just look for relationships and patterns between numbers in all directions i.e. vertically, horizontally, diagonally etc. Along with that, your numerical ability also plays an important role here i.e. how quickly you can perform basic arithmetic operations. I would also suggest you to learn squares and cubes of at least the first 15 numbers.
+
+  
+
+**How to approach**
+
+If we consider the sample problem we have taken, we can see that we have been given 3 individual circular shapes with 4 parts each. So, from this we can conclude that a common pattern is followed in all three of these circles. Now, to uncover the pattern we just brainstorm by remembering these two things:
+
+1.  Look for relationships and patterns between numbers in all directions i.e. vertically, horizontally, diagonally etc. as I already specified.
+    
+2.  Check for the exact arithmetic operations being performed here.
+    
+
+  
+
+>We observe that the diagonal elements from bottom-left to top-right are being multiplied and the result consists of 2 digits that are represented by the digits from top-left and bottom-right.
+
+  
+
+>So, the number that is missing is 6 (9*4 = 3 6)
+
+  
+
+**Follow Up**
+
+You can try to identify the solution to some example problems that I am providing. Remember that the problems similar to the coding problems you will face later do not have a single pre-defined algorithm to find their solution. Your job is to find a solution by taking inspiration from the methodologies I’ve discussed above.
+
+  
+
+1.    
+    
+![](https://lh3.googleusercontent.com/lEzB6qym2Cfwnm4gG2T6Zf5i1pj0wCLhGklqKXfCws14xJ2DN088nbxXM695-SVqbSwAf5Iah53561uKjsogkoVnyDtZ8cmaN9ajRW-mpha43IYGsKY7xbi-qEMC1ZHFicrl6MDKR0wtdHljug)
+
+  
+  
+  
+
+<details>
+  <summary>Check the solution!</summary>
+  
+ 4 + 8 = 12 + x => x = 0
+  
+</details>  
+  
+  
+  
+  
+
+
+  
+
+2.    
+    
+![](https://lh4.googleusercontent.com/i09W3_7WJ223sF8y_Om1mkxaHrgvDnQnKKeQ-mSZ1mnjF0S9QcO7u_0PFJ58IeWXsEGKkSzf_n89NFkTG4N1TXtt7ph8065GodyIHClDG_bmh4Nlvgsx29FIWE2JK7jGm_agDloeNgwAmwmnUQ)
+
+  
+  
+  
+  
+
+<details>
+  <summary>Check the solution!</summary>
+  
+(6 x 12) – 5 = 67
+  
+</details>  
+  
+  
+  
+  
+
+
+  
+  
+
+3.    
+
+![](https://lh3.googleusercontent.com/Byz33e5BUqu-_TD4JPMkVkugH6FIrhGBW4noKDx-KgZxItTeZx3XGmCWg4f-YVm7LQJT36bDY3_aLkZ2yJb9aVBJXkPAGyyjEP-Mp2Mdo9XYUs6dD0-woGp26rCzkwvnqC2LZgLXCIyY-9dbkw)
+
+  
+  
+  
+
+<details>
+  <summary>Check the solution!</summary>
+  
+358 x 2 = 716, so 1
+  
+</details>  
+  
+  
+  
+  
+  
+
+
+  
+
+## KenKen PUZZLES
+
+We will be looking at some special puzzle games in this section. We have already previously talked about the importance of quickness in using basic arithmetic operations. Well, KenKen puzzles test just that particular ability.
+
+  
+
+**Problem Statement:** Here, we are given a grid of size 4x4 and it has been divided into highly outlined areas as we can see.
+
+-   These heavily outlined areas are called “cages”
+    
+-   The top left corner of each cage has a number and an arithmetic operation associated with it, the number defines the result that we must get after applying the specified arithmetic operation on the numbers in the cage.
+    
+-   Each row and column must be uniquely filled with numbers within a range and this range is decided by grid size (4x4 grid means we have to fill each row and column with numbers from 1 to 4).
+    
+
+  
+  
+![](https://lh3.googleusercontent.com/AIu7GuIzs6EdIYf1Liog1dobDl2Hux4ov-L7lk9-Y7zdQ5KXVT_85-4Wo8GyYLOkjaiXifCQp87CZ4OpeLqWFQCf3qAeW1Z1fHoVCHxGlS0tTLgVrQQ046Tfy4-ozW6D74dHK8SPCiKngM4-lg)  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+
+**Approach to KenKen puzzles**
+
+  
+
+These puzzles will help us in making decisions in a constrained manner which is very helpful while solving problems. Here, you can’t use a number more than once in a row or column. Similarly, while solving coding problems you might be constrained to not use some tools by an interviewer in an interview.
+
+  
+
+In the puzzle we can see that, first of all we see that there are two cages with only one cell and they can only have one number i.e. 3 and 1. Take this as the starting point, and move forward with the consideration that we can’t use 3 in the 2nd row and 2nd column row and 1 in the last row and first column.
+
+  
+
+>Now, we just have to consider the possible combinations of numbers that can work by keeping the constraints in mind.
+
+For example, in the top left most cage, we have 1-, the possible combinations that can achieve this result are 1,2(X); 2,1; 2,3(X); 3,4; 4,3(X).
+
+The combinations marked with X are not possible due to the constraints we obtained by filling the initial unit cells.
+
+The possible combinations are 2,1; 3,4. Now, again we take 3,4 and fill the box, we see that we are only left with 2 and 4 for the first row.
+
+
+>And, this is a problem, because we have to fill the middle-left cage with 1- which is not possible with 2 and 4. Hence, we have reached the only possible combination for the top-left cage i.e. 2,1. Similarly, we can use the already filled cells to fill the cells that are empty. Remember, the process of elimination of possibilities is the key here.
+
+  
+
+**Complete Solution:**
+
+![](https://lh6.googleusercontent.com/stnRvgDr3mNWUKq9BxxClj4gicJDCauiWffzdWmrp9nY_ZBVRAIIOZ7TlngoUmVquWLHcRynk6qCXiRQgZeyaGYP79nNKzKFspmOyjq_w-8XT5rg_h7n1NfZj9VCk1ON4seAOnon83BN6dP6iA)
+  
+  
+  
+  
+  
+  
+  
+  
+  
+
+**Follow Up**
+
+You can try to solve more of these puzzles and if you are still stuck, try solving KenKen Puzzles of size 3x3 online and then using the experience you will be able to solve the harder 4x4 puzzles.
+
+  
+
+**Solve the given KenKen puzzle:** 
+
+![](https://lh3.googleusercontent.com/ThI0pyhqbWeZrf4z9TOs1vO3vDoE5H77A7s9NyLOiQVmmpQEE6HErVg24ZusTVpfSOzIGTGPXhYZc9N5EOaTcp5_y3O-bP_s_rAcq-QF5DVAutFqD11hI6Orn4R8zeGZTkparm1u8bCHGCcu9Q)
+
+**Solution:**
+
+![](https://lh4.googleusercontent.com/3eEmnAHMqVp0gj6IKseD80jEt2QCtWyvANUEjgdqfa--kKYRfzsRDwMA5QsGbc9dvDmEKeyxpBm2cPN6BFQeBPegIBQkMlGu0hjbDS-y00WLyJYkh3fNAcU_bUFYn-2EfRmkmDmUfHsBrVXaYg)
+
+  
+  
+  
+  
+
+# End-of-the-lesson Assessment
+
+Q1: In the Match Stick Magic challenge, which two digit number can be formed with the help of sticks from digit 9?
+
+1.  41
+    
+2.  22
+    
+3.  14
+    
+4.  (a) & (b) both [✔]
+    
+
+  
+
+Q2: Find the number that will come in place of the question mark.
+
+  
+![](https://lh4.googleusercontent.com/E7Se3nVJE8LqAk45Fuah8ENF6CP-3D53WIamhviISt5Ct3ohc6RFvtRLQvDzNdvQ9B63ykV8Qe0JfhK_e5WY6LtspLlsavcZEUb60BZvAcjpSZLYbw7baSNtvsr_YIwnnxBLXI1Cj22BGRMZLw)  
+  
+  
+  
+  
+  
+  
+  
+
+1.  51 [✔]
+    
+2.  22
+    
+3.  12
+    
+4.  54
+    
+
+  
+
+Q3: Find the digit that will come in place of the question mark in the following KenKen puzzle![](https://lh4.googleusercontent.com/MJAEJ2P5JfTWOi7JlZOlAiw8fUF6_cjZBHS8FLDVuzCqZWnRHQ5UkON7lN7Slla4z35AO754MV3yNus84Z53w7Kadd3efa9PUs6y2E2mZf-dQmIP9mV_9ALc6f9Fq_IlGhXX8TC0y6ZnMxN2yw)
+
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+
+1.  1
+    
+2.  3 [✔]
+    
+3.  2
+    
+4.  4
+
 
 `Under the hood` :bulb:
