--- a/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/16-Under-the-hood.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/16-Under-the-hood.mdx
@@ -5,10 +5,147 @@ Under the hood lessons are meant for practice, as we know that skills come from 
 
 ## Thinking with numbers
 
+### Match Stick Magic
+
+![](https://lh3.googleusercontent.com/wZl9SW_N7ybAy_Kza3oHGcyyiRx68YiJ3e-6xOPZuPc8kJjrp3dwajheHuUE_ov199QCXS9FTyHNi8IGqtpIV3KzIgqli-bQVAjxfiIaB953Q5opi2j2Ejp7je-_HREGxIAByBJ2Vs_BjiJblXg)
+
+[**Check the solution!**](https://lh4.googleusercontent.com/JjnFJrAYvAoKEiglYAYt9S2tCo3kZdwu7Ttqx_xG0efuLtI49hG4ulpKBIkD9R5x3-S12HuPfBsYAlAFjsb-w_3ahzxwlrHj80-5iubHzIySNJNIVSqIrbTdimGGKIvAym5qulE7WM12uMHCIvo)
+
+![](https://lh4.googleusercontent.com/DIRcmgdPKdIY5dooHeDzgspMJFZbC_uZotaAt_05PTA_dx1hhQqpOcIrwF3zf9YvmMBIrdnksX5BWMXMNvoWhcSV6qpAqoTCEUKNzon0b9iQyTYlbKQ23Zi7KZ-qa-cEXPgoSYHe7SMR09SvdlIoczU)
+
+[**Check the solution!**](https://lh5.googleusercontent.com/x7QjEHBmMdPTbQCT9K88gu3wrkr0JddbwYK2cBNREGCY0YO603gDyG7cDHrpUNBXK57ooFcg70GjmQtbxg_tPjPyT_dO-7zsLrpM57XeDtOVfvXF0FQdWEEYZJwk9x7So66iqU5VzCs3xXUCfFk)
+
+![](https://lh5.googleusercontent.com/Ix5XWwsnR6jZTkG2KcvdOd-o9-39YJXPWbNYdkzymIOnVf8J5o4Q2fKx0fd7tqi7hpHX1dAjpueHyVbaY6BM4qBjHC2pa75_MKHoTMNZEyWLiHXwVQYmsaXUwdOEV_cdGvmWgBYmobc1h7o4Avc)
+
+[**Check the solution!**](https://lh3.googleusercontent.com/DZid8TyEZghOQYFIHz5qGog8CqFMhsXZtOtbJrY0B_I3Z0N7bQymwjI9j7aAZVTHLEqHTjLRbSEPDfqkbvCOFJMNfKJFB8-jD7we5QBMLVU3s3OXjSupFtZqpd84ZsaAawhTlC0drPEiblzI3Qo)
+
+![](https://lh3.googleusercontent.com/C3f1boqYtWFsBrx4enkvNvvqF_8zRIZTE1YwXaFy9GE6IML7X6Jdb7QoMFAwCNuNXvtHgIh9u2g4HWZEOh8qM0qxa_UP1Iuw9xBDJOdW-3sOiOu6Ch9xi6wQSVLFNO4wYk8_kBUNH-2SQxl5MF4z04w)
+
+[**Check the solution!**](https://lh3.googleusercontent.com/9Q-W9Ng2RH8ah8h7INuuwkK3VvG7CQ7-XZy2TPoIzvr7AMRAL_O3uoLCdMbwjlSGheV0h9i35q656pYbFMmnMtK8fPNXcTqi8VuENTbyGlOmN75HsHH_7L9it9dLQ2DENR32iAGBuuCzGRw0OTY)
+
+### Number Series 
+
+**Que:**Which number should come in the place of question mark?
+
+
+![](https://lh3.googleusercontent.com/fTbke6VWFcFsMyzNuFbeC8s47o6o76m7NhxYqOdFz3QWgsXeikPYAh2SKvqZ1WbSk2WIpJ3jTY0I_2sD7MsMtk9jX5TiYPijBiTryIiBdrG4lug68dyLly81SvBfbaWGrYdukucE8CzRHujYVg)
+
+<details>
+  <summary>Check the solution!</summary>
+  
+  6
+  
+</details>
+
+**Que:**Which number should come in the place of question mark?
+
+![](https://lh6.googleusercontent.com/HxPSu7Ppf_tWfoqke9KgUjvXsabVxuwGFsY6wYtDz3R3a-j4svWOeR9ffKztE2giyQtTCo7_fB_TSgYHg95ddSBaH5iwDfH6kxBw8K9AfhVc_WWvRhsXZH45m_3p0Z0YtSJwhxi_WUrwsZn4tQ)
+
+
+<details>
+  <summary>Check the solution!</summary>
+  
+  176
+  
+</details>
+
+
+**Que:**Which number should come in the place of question mark?
+
+![](https://lh6.googleusercontent.com/CGu0cgAUpxVeOV64g5QogY-7JeOVKDyUi2iQahZhLKDRHzdyI9eWB4IAgXIoNcGDIUIgHZSvHbqXNFIaUnCnXaq2X3jxV00Qs9gymtafjCpRZWKJchfZIpLkSqpjjN1hgVhcwhba_CZ-ChOQlg)
+
+
+<details>
+  <summary>Check the solution!</summary>
+  
+  32
+  
+  
+</details>
+
+**Que:**What, with reference to this question, is the next number in the sequence below?
+
+3, 3, 5, 1, 3, 4, 1, 2, 3, 4, 1, 2, ?
+
+
+<details>
+  <summary>Check the solution!</summary>
+  
+  4
+  
+</details>
+
+
+**Que:**What number should replace the question mark?
+
+742 (8710) 138
+395 (12167) 972
+819 (?) 356
+<details>
+  <summary>Check the solution!</summary>
+  
+  11615
+  
+</details>
+
+**Que:**What number should replace the question mark?
+
+![](https://lh4.googleusercontent.com/uXBfbnjePCanGymkAD-DfxQdFtcVXjubVW_UtLd3VEDy5YoYrWs20V_r56D39se0En2gzinLqgFOW1LTlKO9V6M_esWwZdyytBObH6CBkiPUSXs8-WX6TNeS0J0wr5eznxWDleJoJISS8rzNow)
+
+<details>
+  <summary>Check the solution!</summary>
+  
+  8
+  
+</details>
+
+
+**Que:**Solve the given puzzle and find the value of x.
+
+**Hint:** Only 1, 2, 3, 4 numbers should be used. The numbers should be distinct across rows and columns.
+
+![](https://lh6.googleusercontent.com/3dflt80NLwnq7BPZK0gF9gojVkTKRjmJAjU0gs8w6e0wgmtqB9u_7DzkOO545nm1GKVIwbrlmQI9qCyvINITOw_Q8bwYcW7e6QHYSt2rRU1mojjFAm0c2l5N41JmF9NS1wilvZZ3GRHrxM95gA)
+
+<details>
+  <summary>Check the solution!</summary>
+  
+  2
+
+</details>
+
+**Que:**Correct the equation given only using the digits given
+![](https://lh4.googleusercontent.com/J9FqQ99BjmjJna_OTX19V9OFU38OAqpkE0Vog-XElgtBMUj-YiuOdlQ7E0Xc_rrToTSBnknO0TziOpu1Yu6R0emd380x8Ga_dGAftp4CL80xg6vJE0hiAPfLahma-9c-HO6P18gQX1VoU4NlQNWYIic)
+
+<details>
+  <summary>Check the solution!</summary>
+  
+  (9/3) + (8/2) – (0/1) = 7
+
+</details>
+
+
+
+**Que:**Correct the equation given only using the digits given
+![](https://lh4.googleusercontent.com/iCAeu0fAvVgKE-ZtywR_hYyCvrNdBS89rGLlJ9C9JiMh1HlGHbOhclJbPSQGrnqHHZL862-miX9HiVGDHSCfZIM1HQA-crf4Ri4EPzViNPGkJ7OlTufIOteUP0-B3DUcOETqA4wHLBUyltOF31g)
+
+<details>
+  <summary>Check the solution!</summary>
+  
+ ( 7 / 2 ) x 4 - 6 = 8
+
+</details>
+
+**Que:**Correct the equation given only using the digits given
+![](https://lh4.googleusercontent.com/1z3xcD5zt86NIJejTFFchFlHX0K4GMEvK5LZXmXf66eUK4EHr0K56xCsxehJX0s_3Aqh1PX0LRNDpywwCsIKe3-ha1FJ4WBMCsaCutDpBrDvys4mgahXwsM0yOdtgupqZGqtkBi8mpYGHMXXOA0)
+<details>
+  <summary>Check the solution!</summary>
+  
+  ( 9 / 4 ) x 8 + 3 = 2 1
+
+</details>
+
 
 
 ## Thinking with visuals
-
-
 
 ## 
